# chameleonEmulator

./: CMakeLists.txt  README.md  base.cmake  build_win32.bat
source/cExamples/dspthru/: CMakeLists.txt
source/cExamples/hostcommands/: CMakeLists.txt
source/ceLib/: CMakeLists.txt  ceDsp.cpp  ceDsp.h  ceDspPeripherals.cpp  ceDspPeripherals.h  cePanel.cpp  cePanel.h  cePlugin.cpp  cePlugin.h  ceRtems.cpp  ceRtems.h  ringbuffer.h
source/pluginVST2/: CMakeLists.txt  vstAudioEffect.cpp  vstAudioEffect.h
temp/cmake_win32/: chameleonEmu.sln.DotSettings
tools/: .gitignore
